--- a/public/propiedad.html
+++ b/public/propiedad.html
@@ -1,4 +1,4 @@
-<!-- propiedad.html - Vista premium de propiedad (Slider + Mapa + Modal Fullscreen) -->
+<!-- propiedad.html - Vista premium de propiedad -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -8,135 +8,16 @@
 
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
-
-  <style>
-    /* ===========================
-       ESTILOS DEL SLIDER
-    ============================ */
-    .slider-container {
-      position: relative;
-      width: 100%;
-      height: 480px;
-      border-radius: 12px;
-      overflow: hidden;
-      background: #eaeaea;
-      margin-bottom: 14px;
-    }
-
-    .slider-container img {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      opacity: 0;
-      transition: opacity .6s ease;
-    }
-
-    .slider-container img.activa {
-      opacity: 1;
-    }
-
-    .flecha {
-      position: absolute;
-      top: 50%;
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      background: rgba(0,0,0,0.4);
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 26px;
-      cursor: pointer;
-      user-select: none;
-      z-index: 50;
-      transform: translateY(-50%);
-    }
-    .flecha:hover {
-      background: rgba(0,0,0,0.6);
-    }
-    .flecha-izq { left: 14px; }
-    .flecha-der { right: 14px; }
-
-    .favorito-detalle {
-      position: absolute;
-      top: 18px;
-      right: 18px;
-      font-size: 35px;
-      cursor: pointer;
-      z-index: 60;
-      text-shadow: 0 2px 10px rgba(0,0,0,0.5);
-    }
-
-    /* Miniaturas */
-    .miniaturas {
-      display: flex;
-      gap: 10px;
-      overflow-x: auto;
-      margin-bottom: 20px;
-    }
-    .miniaturas img {
-      width: 120px;
-      height: 75px;
-      border-radius: 8px;
-      object-fit: cover;
-      opacity: .7;
-      transition: .2s;
-      cursor: pointer;
-    }
-    .miniaturas img.activa {
-      opacity: 1;
-      border: 2px solid #7cc242;
-      transform: scale(1.03);
-    }
-
-    /* Modal fullscreen */
-    .modal {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.9);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 2000;
-    }
-    .modal img {
-      width: 90%;
-      max-width: 1000px;
-      max-height: 90vh;
-      object-fit: contain;
-    }
-    .modal-cerrar {
-      position: absolute;
-      top: 30px;
-      right: 40px;
-      font-size: 45px;
-      color: white;
-      cursor: pointer;
-      user-select: none;
-    }
-
-    #mapa {
-      width: 100%;
-      height: 350px;
-      border-radius: 12px;
-      margin-top: 20px;
-      background: #eee;
-    }
-  </style>
-
 </head>
+
 <body>
 
-<!-- Encabezado igual al INDEX -->
 <header class="header">
   <div class="logo" onclick="location.href='index.html'">Costa Hogar</div>
 
   <nav class="menu">
-    <a href="index.html?modo=venta">Comprar</a>
-    <a href="index.html?modo=alquiler">Alquilar</a>
+    <a href="comprar.html">Comprar</a>
+    <a href="alquiler.html">Alquilar</a>
     <a class="publicar-btn" href="publicar.html">Publicar anuncio</a>
   </nav>
 
@@ -147,208 +28,18 @@
   </div>
 </header>
 
-<!-- Contenido -->
 <main class="container" id="contenedor">
   Cargando propiedad...
 </main>
 
-
-<!-- Modal -->
 <div class="modal" id="modal">
   <span class="modal-cerrar" onclick="cerrarModal()">×</span>
   <img id="modal-img">
 </div>
 
+<!-- Scripts -->
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-<script>
-let propiedad = null;
-let fotos = [];
-let indexFoto = 0;
-let favoritos = JSON.parse(localStorage.getItem("favoritos") || "[]");
-
-const API_KEY = "691dbf7ce0ac5786669402bgm8f835e"; // 🔥 TU API KEY AQUÍ
-
-
-/* ===============================
-   CARGAR PROPIEDAD
-================================ */
-async function cargarPropiedad() {
-  const id = new URLSearchParams(location.search).get("id");
-  const res = await fetch("/propiedades");
-  const data = await res.json();
-
-  propiedad = data.find(p => p._id === id);
-
-  if (!propiedad) {
-    document.getElementById("contenedor").innerHTML = "<h2>Propiedad no encontrada</h2>";
-    return;
-  }
-
-  fotos = propiedad.imagenes.length ? propiedad.imagenes : [
-    "https://via.placeholder.com/1200x700?text=Sin+Imagen"
-  ];
-
-  renderPropiedad();
-  iniciarSlider();
-  generarMiniaturas();
-  iniciarMapa();
-  actualizarFavoritoUI();
-}
-
-
-/* ===============================
-   RENDERIZAR PROPIEDAD
-================================ */
-function renderPropiedad() {
-  const html = `
-    <div class="slider-container" id="slider">
-      ${fotos.map((f,i)=>`<img src="${f}" class="${i===0?'activa':''}">`).join("")}
-
-      <div class="flecha flecha-izq" onclick="cambiarFoto(-1)">&#10094;</div>
-      <div class="flecha flecha-der" onclick="cambiarFoto(1)">&#10095;</div>
-
-      <div class="favorito-detalle" onclick="toggleFavorito()" id="favBtn">🤍</div>
-    </div>
-
-    <div class="miniaturas" id="miniaturas"></div>
-
-    <h1>${propiedad.titulo}</h1>
-    <p class="price">${propiedad.precio} €</p>
-    <p><strong>Dirección:</strong> ${propiedad.direccion}</p>
-    <p><strong>Descripción:</strong> ${propiedad.descripcion || "Sin información"}</p>
-
-    <h2>Ubicación</h2>
-    <div id="mapa"></div>
-
-    <br>
-    <a class="volver-btn" href="index.html">⬅ Volver</a>
-  `;
-
-  document.getElementById("contenedor").innerHTML = html;
-}
-
-
-/* ===============================
-   SLIDER & MINIATURAS
-================================ */
-function iniciarSlider() {
-  setInterval(() => cambiarFoto(1), 5000);
-}
-
-function cambiarFoto(dir) {
-  const imgs = document.querySelectorAll("#slider img");
-
-  imgs[indexFoto].classList.remove("activa");
-  indexFoto = (indexFoto + dir + imgs.length) % imgs.length;
-  imgs[indexFoto].classList.add("activa");
-
-  marcarMiniatura();
-}
-
-function generarMiniaturas() {
-  const mini = document.getElementById("miniaturas");
-  mini.innerHTML = "";
-
-  fotos.forEach((f, i) => {
-    const img = document.createElement("img");
-    img.src = f;
-    if (i === 0) img.classList.add("activa");
-
-    img.addEventListener("click", () => {
-      indexFoto = i;
-      document.querySelectorAll("#slider img").forEach(img => img.classList.remove("activa"));
-      document.querySelectorAll("#slider img")[i].classList.add("activa");
-      marcarMiniatura();
-    });
-
-    img.addEventListener("dblclick", () => abrirModal(f));
-
-    mini.appendChild(img);
-  });
-}
-
-function marcarMiniatura() {
-  document.querySelectorAll(".miniaturas img")
-    .forEach((img, i) => img.classList.toggle("activa", i === indexFoto));
-}
-
-
-/* ===============================
-   MODAL FULLSCREEN
-================================ */
-function abrirModal(src) {
-  document.getElementById("modal-img").src = src;
-  document.getElementById("modal").style.display = "flex";
-}
-
-function cerrarModal() {
-  document.getElementById("modal").style.display = "none";
-}
-
-
-/* ===============================
-   FAVORITOS
-================================ */
-function toggleFavorito() {
-  const id = propiedad._id;
-
-  if (favoritos.includes(id)) {
-    favoritos = favoritos.filter(f => f !== id);
-  } else {
-    favoritos.push(id);
-  }
-
-  localStorage.setItem("favoritos", JSON.stringify(favoritos));
-  actualizarFavoritoUI();
-}
-
-function actualizarFavoritoUI() {
-  const fav = document.getElementById("favBtn");
-  fav.textContent = favoritos.includes(propiedad._id) ? "❤️" : "🤍";
-}
-
-
-/* ===============================
-   MAPA CON API KEY
-================================ */
-async function iniciarMapa() {
-  let lat = propiedad.lat;
-  let lng = propiedad.lng;
-
-  if (!lat || !lng) {
-    console.warn("No hay coordenadas, usando geocoding...");
-
-    const url = `https://geocode.maps.co/search?q=${encodeURIComponent(propiedad.direccion)}&api_key=${API_KEY}`;
-    const r = await fetch(url);
-    const d = await r.json();
-
-    if (d.length) {
-      lat = Number(d[0].lat);
-      lng = Number(d[0].lon);
-    } else {
-      document.getElementById("mapa").innerHTML = "<p>No se pudo cargar el mapa.</p>";
-      return;
-    }
-  }
-
-  const mapa = L.map("mapa").setView([lat, lng], 15);
-
-  setTimeout(() => mapa.invalidateSize(), 400);
-
-  L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-    maxZoom: 19
-  }).addTo(mapa);
-
-  L.marker([lat, lng]).addTo(mapa)
-    .bindPopup(propiedad.direccion)
-    .openPopup();
-}
-
-
-/* INICIAR TODO */
-cargarPropiedad();
-</script>
+<script src="js/propiedad.js"></script>
 
 </body>
 </html>
-
