--- a/public/Perfil.html
+++ b/public/Perfil.html
@@ -54,6 +54,7 @@
       gap: 18px;
       align-items: center;
       font-size: 1.3rem;
+      cursor: pointer;
     }
 
     .contenedor {
@@ -119,7 +120,7 @@
       font-weight:700;
     }
 
-    /* Tarjetas propiedades */
+    /* ---- TARJETAS ---- */
     .lista {
       display:grid;
       grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
@@ -201,8 +202,9 @@
   </div>
 
   <div class="header-right">
-    <span onclick="location.href='favoritos.html'" style="cursor:pointer">❤️</span>
-    <span onclick="location.href='chat.html'" style="cursor:pointer">💬</span>
+    <span onclick="location.href='favoritos.html'">❤️</span>
+    <span onclick="location.href='chat.html'">💬</span>
+    <span onclick="location.href='perfil.html'">👤</span>
   </div>
 </header>
 
@@ -241,22 +243,22 @@
 
 
 <script>
+// ====================================
+// 🟢 PROTEGER PERFIL → si no hay login
+// ====================================
+const usuario = JSON.parse(localStorage.getItem("usuario") || "null");
+if (!usuario) {
+    location.href = "login.html";
+}
+
 // =========================
 // CARGAR DATOS DE USUARIO
 // =========================
 
 function cargarUsuario() {
-  const usuario = JSON.parse(localStorage.getItem("usuario") || "{}");
-
-  document.getElementById("nombreUsuario").textContent =
-    usuario.nombre || "Usuario";
-
-  document.getElementById("emailUsuario").textContent =
-    usuario.email || "correo@example.com";
-
-  // Primera letra como avatar
-  document.getElementById("avatar").textContent =
-    (usuario.nombre?.charAt(0) || "U").toUpperCase();
+  document.getElementById("nombreUsuario").textContent = usuario.nombre;
+  document.getElementById("emailUsuario").textContent = usuario.email;
+  document.getElementById("avatar").textContent = usuario.nombre.charAt(0).toUpperCase();
 }
 
 // =========================
@@ -266,9 +268,15 @@ function cargarUsuario() {
 let propiedades = [];
 
 async function cargarPropiedades() {
-  const res = await fetch("/propiedades");
-  propiedades = await res.json();
+  const token = localStorage.getItem("token");
 
+  const res = await fetch("/propiedades-usuario", {
+    headers: {
+      "Authorization": "Bearer " + token
+    }
+  });
+
+  propiedades = await res.json();
   mostrarPropiedades();
 }
 
@@ -278,19 +286,15 @@ function mostrarPropiedades() {
 
   cont.innerHTML = "";
 
-  const publicadas = propiedades; // en futuro: filtrar por usuario si se desea
-
-  if (publicadas.length === 0) {
+  if (propiedades.length === 0) {
     noProps.style.display = "block";
     return;
   }
 
   noProps.style.display = "none";
 
-  publicadas.forEach(p => {
-    const foto =
-      p.imagenes?.[0] ||
-      "https://via.placeholder.com/400x200?text=Sin+imagen";
+  propiedades.forEach(p => {
+    const foto = p.imagenes?.[0] || "https://via.placeholder.com/400x200?text=Sin+imagen";
 
     const div = document.createElement("div");
     div.className = "card";
@@ -315,6 +319,7 @@ function abrir(id) {
 
 function cerrarSesion() {
   localStorage.removeItem("usuario");
+  localStorage.removeItem("token");
   location.href = "login.html";
 }
 
