--- a/public/perfil.html
+++ b/public/perfil.html
@@ -2,179 +2,137 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfil - Costa Hogar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <style>
-    :root {
-      --green: #7cc242;
-      --shadow: 0 4px 15px rgba(0,0,0,.1);
-    }
-
-
     body {
       margin: 0;
       font-family: "Inter", sans-serif;
       background: #f5f5f5;
-      color: #333;
     }
 
     header {
-      background:white;
-      padding:14px 25px;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      box-shadow:0 2px 8px rgba(0,0,0,0.06);
-      position:sticky;
-      top:0;
-      z-index:100;
+      background: white;
+      padding: 15px 25px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
     }
 
     .logo {
-      color:var(--green);
-      font-weight:700;
-      font-size:1.6rem;
-      cursor:pointer;
+      font-size: 1.6rem;
+      font-weight: 700;
+      color: #7cc242;
+      cursor: pointer;
     }
 
     .contenedor {
-      max-width: 1050px;
+      max-width: 1100px;
       margin: 35px auto;
       padding: 0 15px;
     }
 
-    /* PERFIL */
     .perfil-box {
-      background:white;
-      padding:25px;
-      border-radius:14px;
-      box-shadow:var(--shadow);
-      display:flex;
-      align-items:center;
-      gap:25px;
-      margin-bottom:30px;
+      background: white;
+      padding: 25px;
+      border-radius: 14px;
+      display: flex;
+      gap: 25px;
+      margin-bottom: 35px;
+      box-shadow: 0 4px 15px rgba(0,0,0,.1);
     }
 
     .avatar {
-      width:120px;
-      height:120px;
-      border-radius:50%;
-      background:#ddd;
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      font-size:3rem;
-      font-weight:700;
-      color:white;
-      box-shadow:var(--shadow);
+      width: 110px;
+      height: 110px;
+      border-radius: 50%;
+      background: #7cc242;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 3rem;
+      color: white;
+      font-weight: 700;
     }
 
-    .perfil-info h2 {
-      margin:0;
-      font-size:1.8rem;
-      color:#222;
+    h2 {
+      margin: 0 0 10px;
     }
 
     .logout-btn {
-      margin-top:12px;
-      background:#ff4b4b;
-      border:none;
-      padding:10px 16px;
-      color:white;
-      border-radius:8px;
-      cursor:pointer;
-      font-weight:600;
+      background: #ff4b4b;
+      border: none;
+      color: white;
+      padding: 10px 16px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 600;
     }
 
-    /* SECCIONES */
     .titulo-seccion {
-      font-size:1.6rem;
-      margin:25px 0 15px;
-      font-weight:700;
+      font-size: 1.5rem;
+      margin: 30px 0 15px;
+      font-weight: 700;
     }
 
-    /* LISTA DE PROPIEDADES */
     .lista {
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-      gap:20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 20px;
     }
 
     .card {
-      background:white;
-      border-radius:14px;
-      overflow:hidden;
-      box-shadow:var(--shadow);
-      cursor:pointer;
-      transition:.25s ease;
-    }
-
-    .card:hover {
-      transform: translateY(-4px);
-      box-shadow:0 6px 18px rgba(0,0,0,0.12);
+      background: white;
+      border-radius: 14px;
+      overflow: hidden;
+      box-shadow: 0 4px 15px rgba(0,0,0,.1);
+      cursor: pointer;
     }
 
     .card img {
-      width:100%;
-      height:200px;
-      object-fit:cover;
+      width: 100%;
+      height: 190px;
+      object-fit: cover;
     }
 
     .info {
-      padding:15px;
+      padding: 15px;
     }
 
     .precio {
-      color:var(--green);
-      font-size:1.3rem;
-      font-weight:700;
-      margin-bottom:5px;
-    }
-
-    /* CHAT LIST */
-    .chat-list {
-      display:flex;
-      flex-direction:column;
-      gap:12px;
+      color: #7cc242;
+      font-weight: 700;
+      font-size: 1.3rem;
     }
 
     .chat-item {
-      background:white;
-      padding:16px;
-      border-radius:12px;
-      box-shadow:var(--shadow);
-      cursor:pointer;
-      transition:.2s;
+      background: white;
+      padding: 16px;
+      border-radius: 12px;
+      margin-bottom: 12px;
+      cursor: pointer;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
     }
 
     .chat-item:hover {
-      background:#f0f8e9;
+      background: #f0f8e9;
     }
 
-    .chat-item .titulo {
-      font-weight:700;
-      margin-bottom:6px;
+    .muted {
+      color: #777;
+      text-align: center;
+      margin-top: 15px;
     }
-
-    .chat-item small {
-      color:#666;
-    }
-
   </style>
 </head>
 <body>
 
 <header>
   <div class="logo" onclick="location.href='index.html'">Costa Hogar</div>
-
-  <div>
-    <button class="header-btn" onclick="location.href='index.html?modo=venta'">Comprar</button>
-    <button class="header-btn" onclick="location.href='index.html?modo=alquiler'">Alquilar</button>
-    <button class="header-btn" onclick="location.href='publicar.html'">Publicar</button>
-  </div>
 </header>
 
 <div class="contenedor">
@@ -182,39 +140,108 @@
   <!-- PERFIL -->
   <div class="perfil-box">
     <div class="avatar" id="avatar">U</div>
-
-    <div class="perfil-info">
+    <div>
       <h2 id="nombreUsuario">Usuario</h2>
-      <p id="emailUsuario">correo@example.com</p>
+      <p id="emailUsuario"></p>
       <button class="logout-btn" onclick="cerrarSesion()">Cerrar sesión</button>
     </div>
   </div>
 
-  <!-- PUBLICAR -->
-  <button class="header-btn" style="width:100%; font-size:1.1rem; margin-bottom:30px;"
-          onclick="location.href='publicar.html'">
-    + Publicar nueva propiedad
-  </button>
-
   <!-- PROPIEDADES -->
   <h2 class="titulo-seccion">Mis propiedades publicadas</h2>
-  <div id="lista" class="lista"></div>
-
-  <p id="noProps" style="display:none; text-align:center; margin:25px 0; color:#777;">
-    No has publicado ninguna propiedad.
-  </p>
+  <div id="listaPropiedades" class="lista"></div>
+  <p id="noProps" class="muted" style="display:none;">No has publicado propiedades</p>
 
   <!-- CHATS -->
-  <h2 class="titulo-seccion">Chats recibidos</h2>
-  <div id="chatsRecibidos" class="chat-list"></div>
-
-  <p id="noChats" style="display:none; text-align:center; margin:20px 0; color:#777;">
-    Aún no tienes conversaciones.
-  </p>
+  <h2 class="titulo-seccion">Mis conversaciones</h2>
+  <div id="listaChats"></div>
+  <p id="noChats" class="muted" style="display:none;">No tienes conversaciones</p>
 
 </div>
 
-<script src="js/perfil.js"></script>
+<script>
+/* ======================
+   USUARIO
+====================== */
+const usuario = JSON.parse(localStorage.getItem("usuario") || "{}");
+
+if (!usuario._id) {
+  location.href = "login.html";
+}
+
+document.getElementById("nombreUsuario").textContent = usuario.nombre;
+document.getElementById("emailUsuario").textContent = usuario.email;
+document.getElementById("avatar").textContent =
+  usuario.nombre.charAt(0).toUpperCase();
+
+/* ======================
+   PROPIEDADES
+====================== */
+async function cargarPropiedades() {
+  const res = await fetch("/propiedades");
+  const data = await res.json();
+
+const mias = data.filter(p => String(p.usuarioId) === String(usuario._id));
+  const cont = document.getElementById("listaPropiedades");
+
+  if (mias.length === 0) {
+    document.getElementById("noProps").style.display = "block";
+    return;
+  }
+
+  mias.forEach(p => {
+    const img = p.imagenes?.[0] || "https://via.placeholder.com/400x200";
+    cont.innerHTML += `
+      <div class="card" onclick="location.href='propiedad.html?id=${p._id}'">
+        <img src="${img}">
+        <div class="info">
+          <div class="precio">${p.precio} €</div>
+          <div>${p.direccion}</div>
+        </div>
+      </div>
+    `;
+  });
+}
+
+/* ======================
+   CHATS (PASO 3)
+====================== */
+async function cargarChats() {
+  const res = await fetch(`/chat/mis-conversaciones/${usuario._id}`);
+  const chats = await res.json();
+
+  const cont = document.getElementById("listaChats");
+
+  if (chats.length === 0) {
+    document.getElementById("noChats").style.display = "block";
+    return;
+  }
+
+  chats.forEach(c => {
+    cont.innerHTML += `
+      <div class="chat-item"
+           onclick="location.href='chat.html?id=${c._id}'">
+        <strong>Conversación</strong><br>
+        <small>Propiedad: ${c.propiedadId}</small>
+      </div>
+    `;
+  });
+}
+
+/* ======================
+   LOGOUT
+====================== */
+function cerrarSesion() {
+  localStorage.removeItem("usuario");
+  location.href = "login.html";
+}
+
+/* ======================
+   INIT
+====================== */
+cargarPropiedades();
+cargarChats();
+</script>
 
 </body>
 </html>
