--- a/public/propiedad.html
+++ b/public/propiedad.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Costa Hogar - Propiedad</title>
 
-  <!-- CSS Global -->
+  <!-- CSS -->
   <link rel="stylesheet" href="css/styles.css">
-  <!-- CSS específico de propiedades -->
   <link rel="stylesheet" href="css/propiedad.css">
 
   <!-- Leaflet -->
@@ -27,7 +26,6 @@
 
   <div class="header-right">
     <span class="icon" onclick="location.href='favoritos.html'">❤️</span>
-    <span class="icon" onclick="location.href='chat.html'">💬</span>
     <span class="icon" onclick="location.href='perfil.html'">👤</span>
   </div>
 </header>
@@ -36,21 +34,19 @@
   Cargando propiedad...
 </main>
 
-<!-- Modal Fullscreen imágenes -->
+<!-- MODAL IMÁGENES -->
 <div class="modal" id="modal">
   <span class="modal-cerrar" onclick="cerrarModal()">×</span>
   <img id="modal-img">
 </div>
 
-<!-- Leaflet -->
+<!-- LIBRERÍAS -->
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
-<!-- Chat Inline -->
-<script src="js/chat-inline.js"></script>
-
-<!-- Lógica propiedad -->
+<!-- JS PROPIEDAD -->
 <script src="js/propiedad.js"></script>
 
+<!-- CHAT INLINE (MUY IMPORTANTE) -->
 <script type="module" src="js/chat-inline.js"></script>
 
 </body>
