Header dinámico tipo Idealista en chat y perfil

--- a/public/Chat.html
+++ b/public/Chat.html
@@ -102,9 +102,8 @@
 </head>
 <body>
 
-<header>
-  <div class="logo" onclick="location.href='index.html'">Costa Hogar</div>
-</header>
+<<div id="main-header"></div>
+<script src="/js/header.js"></script>
 
 <div class="chat-container">
   <div class="chat-header" id="chatHeader">Cargando conversación…</div>
