--- a/public/index.html
+++ b/public/index.html
@@ -11,24 +11,8 @@
 
 <body>
 
-<!-- ================================
-     HEADER FIJO
-================================ -->
-<header class="header">
-  <div class="logo" onclick="location.href='index.html'">Costa Hogar</div>
-
-  <nav class="nav">
-    <button class="nav-btn" onclick="location.href='comprar.html'">Comprar</button>
-    <button class="nav-btn" onclick="location.href='alquiler.html'">Alquilar</button>
-    <button class="nav-btn green" onclick="location.href='publicar.html'">Pon tu anuncio</button>
-  </nav>
-
-  <div class="header-right">
-    <span class="icon" onclick="location.href='favoritos.html'">❤️</span>
-    <span class="icon" onclick="location.href='chat.html'">💬</span>
-    <button class="login-btn" onclick="location.href='login.html'">Iniciar sesión</button>
-  </div>
-</header>
+<div id="main-header"></div>
+<script src="/js/header.js"></script>
 
 <!-- ================================
      HERO + CARRUSEL CON FRASES
