--- a/public/propiedad.html
+++ b/public/propiedad.html
@@ -15,20 +15,9 @@
 
 <body>
 
-<header class="header">
-  <div class="logo" onclick="location.href='index.html'">Costa Hogar</div>
+<div id="main-header"></div>
+<script src="/js/header.js"></script>
 
-  <nav class="nav">
-    <a class="nav-btn" href="index.html?modo=venta">Comprar</a>
-    <a class="nav-btn" href="index.html?modo=alquiler">Alquilar</a>
-    <a class="nav-btn green" href="publicar.html">Publicar anuncio</a>
-  </nav>
-
-  <div class="header-right">
-    <span class="icon" onclick="location.href='favoritos.html'">❤️</span>
-    <span class="icon" onclick="location.href='perfil.html'">👤</span>
-  </div>
-</header>
 
 <main class="container" id="contenedor">
   Cargando propiedad...
