--- a/public/login.html
+++ b/public/login.html
@@ -79,7 +79,7 @@ button:hover{ background:#63a831; }
     </div>
 </div>
 
-<script src="js/auth.js"></script>
+<script src="/js/auth.js"></script>
 
 </body>
 </html>
