--- a/public/perfil.html
+++ b/public/perfil.html
@@ -131,9 +131,9 @@
 </head>
 <body>
 
-<header>
-  <div class="logo" onclick="location.href='index.html'">Costa Hogar</div>
-</header>
+<div id="main-header"></div>
+<script src="/js/header.js"></script>
+
 
 <div class="contenedor">
 
