Fix: renombrar Chat.html a chat.html y corregir rutas

--- a/public/login.html
+++ b/public/login.html
@@ -75,7 +75,7 @@ button:hover{ background:#63a831; }
 
     <div class="text-small">
         ¿No tienes cuenta?
-        <a href="registro.html">Crear cuenta</a>
+        <a href="/registro.html">Crear cuenta</a>
     </div>
 </div>
 
