--- a/public/registro.html
+++ b/public/registro.html
@@ -75,11 +75,11 @@ button:hover{ background:#63a831; }
 
     <div class="text-small">
         ¿Ya tienes cuenta?
-        <a href="login.html">Iniciar sesión</a>
+        <a href="/login.html">Iniciar sesión</a>
     </div>
 </div>
 
-<script src="js/auth.js"></script>
+<script src="/js/auth.js"></script>
 
 </body>
 </html>
