--- a/public/Chat.html
+++ b/public/Chat.html
@@ -14,22 +14,6 @@
       background: #f5f5f5;
     }
 
-    header {
-      background: white;
-      padding: 15px 25px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
-    }
-
-    .logo {
-      font-size: 1.6rem;
-      font-weight: 700;
-      color: #7cc242;
-      cursor: pointer;
-    }
-
     .chat-container {
       max-width: 900px;
       margin: 30px auto;
@@ -102,28 +86,44 @@
 </head>
 <body>
 
-<<div id="main-header"></div>
-<script src="/js/header.js"></script>
+<!-- HEADER DINÁMICO -->
+<div id="main-header"></div>
 
 <div class="chat-container">
-  <div class="chat-header" id="chatHeader">Cargando conversación…</div>
+  <div class="chat-header" id="chatHeader">
+    Cargando conversación…
+  </div>
 
   <div class="chat-messages" id="chatMessages"></div>
 
   <div class="chat-input">
     <input id="mensajeInput" placeholder="Escribe un mensaje…">
-    <button onclick="enviarMensaje()">Enviar</button>
+    <button id="btnEnviar">Enviar</button>
   </div>
 </div>
 
 <script>
 /* ==========================
-   INIT
+   SESIÓN
 ========================== */
-const usuario = JSON.parse(localStorage.getItem("usuario") || "{}");
-if (!usuario._id) location.href = "login.html";
+const rawUsuario = localStorage.getItem("usuario");
+const token = localStorage.getItem("token");
 
-const params = new URLSearchParams(location.search);
+let usuario = null;
+try {
+  usuario = JSON.parse(rawUsuario);
+} catch {
+  usuario = null;
+}
+
+if (!usuario || !usuario._id || !token) {
+  location.replace("/login.html");
+}
+
+/* ==========================
+   CONVERSACIÓN
+========================== */
+const params = new URLSearchParams(window.location.search);
 const conversacionId = params.get("id");
 
 if (!conversacionId) {
@@ -143,7 +143,7 @@ async function cargarMensajes() {
 
   mensajes.forEach(m => {
     const div = document.createElement("div");
-    div.className = "msg " + (m.userId === usuario._id ? "me" : "them");
+    div.className = "msg " + (String(m.userId) === String(usuario._id) ? "me" : "them");
     div.textContent = m.texto;
     cont.appendChild(div);
   });
@@ -161,7 +161,10 @@ async function enviarMensaje() {
 
   await fetch(`/chat/conversaciones/${conversacionId}/mensajes`, {
     method: "POST",
-    headers: { "Content-Type": "application/json" },
+    headers: {
+      "Content-Type": "application/json",
+      "Authorization": "Bearer " + token
+    },
     body: JSON.stringify({
       userId: usuario._id,
       texto
@@ -172,12 +175,17 @@ async function enviarMensaje() {
   cargarMensajes();
 }
 
+document.getElementById("btnEnviar").onclick = enviarMensaje;
+
 /* ==========================
    START
 ========================== */
 cargarMensajes();
 setInterval(cargarMensajes, 2000);
 </script>
+
+<!-- HEADER (SIEMPRE AL FINAL) -->
+<script src="/js/header.js" defer></script>
 
 </body>
 </html>
